--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-sparkfabrik",
+  "name": "Quotes Saver",
   "type": "module",
   "version": "0.0.0",
   "private": true,
@@ -40,7 +40,8 @@
     "simple-git-hooks": "^2.9.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-pwa": "^0.19.0"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged",
